poc/tests/errors/test_FplVariableAlreadyDeclared_functional_term_02.fpl
Test.Namespace
{
    theory
    {
        function Test() -> Nat
        {
            x: Nat
            x: Nat
            return x
        }
    }
}

##############################

FplVariableAlreadyDeclared:8:13: The name 'x' was already declared in the current context at (7,13)